--- a/HRApi/src/HRApi/project.json
+++ b/HRApi/src/HRApi/project.json
@@ -10,7 +10,8 @@
     "Microsoft.Extensions.Logging.Console": "1.0.0",
     "Microsoft.EntityFrameworkCore": "1.1.1",
     "Microsoft.AspNetCore.Mvc": "1.1.2",
-    "Microsoft.EntityFrameworkCore.SqlServer": "1.1.1"
+    "Microsoft.EntityFrameworkCore.SqlServer": "1.1.1",
+    "Microsoft.AspNetCore.Mvc.Core": "1.1.2"
   },
 
   "tools": {
