--- a/HRApi/src/HRApi/project.json
+++ b/HRApi/src/HRApi/project.json
@@ -11,7 +11,8 @@
     "Microsoft.EntityFrameworkCore": "1.1.1",
     "Microsoft.AspNetCore.Mvc": "1.1.2",
     "Microsoft.EntityFrameworkCore.SqlServer": "1.1.1",
-    "Microsoft.AspNetCore.Mvc.Core": "1.1.2"
+    "Microsoft.AspNetCore.Mvc.Core": "1.1.2",
+    "Microsoft.AspNetCore.Identity.EntityFrameworkCore": "1.0.0"
   },
 
   "tools": {
