--- a/HRApi/src/HRApi/project.json
+++ b/HRApi/src/HRApi/project.json
@@ -12,7 +12,9 @@
     "Microsoft.AspNetCore.Mvc": "1.1.2",
     "Microsoft.EntityFrameworkCore.SqlServer": "1.1.1",
     "Microsoft.AspNetCore.Mvc.Core": "1.1.2",
-    "Microsoft.AspNetCore.Identity.EntityFrameworkCore": "1.0.0"
+    "Microsoft.AspNetCore.Identity.EntityFrameworkCore": "1.0.0",
+    "Microsoft.Owin": "3.1.0",
+    "Owin": "1.0.0"
   },
 
   "tools": {
