--- a/HRApi/src/HRApi/project.json
+++ b/HRApi/src/HRApi/project.json
@@ -14,7 +14,8 @@
     "Microsoft.AspNetCore.Mvc.Core": "1.1.2",
     "Microsoft.AspNetCore.Identity.EntityFrameworkCore": "1.0.0",
     "Sendgrid": "9.2.0",
-    "Microsoft.Extensions.Configuration.Json": "1.0.0" 
+    "Microsoft.Extensions.Configuration.Json": "1.0.0",
+    "MailKit": "1.16.1" 
   },
 
   "tools": {
