--- a/HRApi/src/HRApi/project.json
+++ b/HRApi/src/HRApi/project.json
@@ -12,6 +12,8 @@
     "Microsoft.AspNetCore.Mvc": "1.1.2",
     "Microsoft.EntityFrameworkCore.SqlServer": "1.1.1",
     "Microsoft.AspNetCore.Mvc.Core": "1.1.2",
+    "Microsoft.VisualStudio.Web.CodeGenerators.Mvc": "1.0.0-preview2-final",
+    "Microsoft.VisualStudio.Web.CodeGeneration.Tools": "1.0.0-preview2-final",
     "Microsoft.AspNetCore.Identity.EntityFrameworkCore": "1.0.0",
     "Sendgrid": "9.2.0",
     "Microsoft.Extensions.Configuration.Json": "1.1.2",
