--- a/HRApi/src/HRApi/project.json
+++ b/HRApi/src/HRApi/project.json
@@ -1,34 +1,44 @@
 {
   "dependencies": {
     "Microsoft.NETCore.App": {
-      "version": "1.0.1",
-      "type": "platform"
+      "type": "platform",
+      "version": "1.1.1"
     },
-    "Microsoft.AspNetCore.Diagnostics": "1.0.0",
-    "Microsoft.AspNetCore.Server.IISIntegration": "1.0.0",
-    "Microsoft.AspNetCore.Server.Kestrel": "1.0.1",
-    "Microsoft.Extensions.Logging.Console": "1.0.0",
-    "Microsoft.EntityFrameworkCore": "1.1.1",
-    "Microsoft.AspNetCore.Mvc": "1.1.2",
-    "Microsoft.EntityFrameworkCore.SqlServer": "1.1.1",
-    "Microsoft.AspNetCore.Mvc.Core": "1.1.2",
-    "Microsoft.VisualStudio.Web.CodeGenerators.Mvc": "1.0.0-preview2-final",
-    "Microsoft.VisualStudio.Web.CodeGeneration.Tools": "1.0.0-preview2-final",
-    "Microsoft.AspNetCore.Identity.EntityFrameworkCore": "1.0.0",
+    "Microsoft.AspNetCore.Diagnostics": "1.1.2",
+    "Microsoft.AspNetCore.Server.IISIntegration": "1.1.2",
+    "Microsoft.AspNetCore.Server.Kestrel": "1.1.2",
+    "Microsoft.Extensions.Logging.Console": "1.1.2",
+    "Microsoft.EntityFrameworkCore": "1.1.2",
+    "Microsoft.AspNetCore.Mvc": "1.1.3",
+    "Microsoft.EntityFrameworkCore.SqlServer": "1.1.2",
+    "Microsoft.AspNetCore.Mvc.Core": "1.1.3",
+    "Microsoft.AspNetCore.Identity.EntityFrameworkCore": "1.1.2",
     "Sendgrid": "9.2.0",
     "Microsoft.Extensions.Configuration.Json": "1.1.2",
     "MailKit": "1.16.1",
     "Microsoft.Extensions.Configuration.UserSecrets": "1.1.2",
     "Microsoft.Extensions.Configuration.EnvironmentVariables": "1.1.2",
     "Microsoft.AspNetCore.Authentication.Google": "1.1.2",
-    "Microsoft.AspNetCore.Authentication.Facebook": "1.1.2"
+    "Microsoft.AspNetCore.Authentication.Facebook": "1.1.2",
+    "Microsoft.VisualStudio.Web.CodeGeneration.Tools": {
+      "version": "1.1.0-preview4-final",
+      "type": "build"
+    },
+    "Microsoft.VisualStudio.Web.CodeGenerators.Mvc": {
+      "version": "1.1.0-preview4-final",
+      "type": "build"
+    },
+    "Microsoft.AspNetCore.StaticFiles": "1.0.0-*"
   },
-
   "tools": {
-    "Microsoft.Extensions.SecretManager.Tools": "1.0.0-preview2-final",
-    "Microsoft.AspNetCore.Server.IISIntegration.Tools": "1.0.0-preview2-final"
+    "Microsoft.AspNetCore.Server.IISIntegration.Tools": "1.0.0-preview2-final",
+    "Microsoft.VisualStudio.Web.CodeGeneration.Tools": {
+      "version": "1.1.0-preview4-final",
+      "imports": [
+        "portable-net45+win8"
+      ]
+    }
   },
-
   "frameworks": {
     "netcoreapp1.0": {
       "imports": [
@@ -37,27 +47,25 @@
       ]
     }
   },
-
   "buildOptions": {
     "emitEntryPoint": true,
     "preserveCompilationContext": true
   },
-
   "runtimeOptions": {
     "configProperties": {
       "System.GC.Server": true
     }
   },
-
-    "publishOptions": {
-      "include": [
-        "wwwroot",
-        "web.config"
-      ]
-    },
-
-    "scripts": {
-      "postpublish": [ "dotnet publish-iis --publish-folder %publish:OutputPath% --framework %publish:FullTargetFramework%" ]
-    },
-    "userSecretsId": "aspnet-HRApi-20170511065628"
-  }
+  "publishOptions": {
+    "include": [
+      "wwwroot",
+      "web.config"
+    ]
+  },
+  "scripts": {
+    "postpublish": [
+      "dotnet publish-iis --publish-folder %publish:OutputPath% --framework %publish:FullTargetFramework%"
+    ]
+  },
+  "userSecretsId": "aspnet-HRApi-20170511065628"
+}
