--- a/HRApi/src/HRApi/project.json
+++ b/HRApi/src/HRApi/project.json
@@ -28,8 +28,9 @@
       "version": "1.1.0-preview4-final",
       "type": "build"
     },
-    "Microsoft.AspNetCore.StaticFiles": "1.0.0-*"
-  },
+    "Microsoft.AspNetCore.StaticFiles": "1.0.0-*",
+    "AutoMapper.Extensions.Microsoft.DependencyInjection": "2.0.1",
+    "AutoMapper": "6.0.2"  },
   "tools": {
     "Microsoft.AspNetCore.Server.IISIntegration.Tools": "1.0.0-preview2-final",
     "Microsoft.VisualStudio.Web.CodeGeneration.Tools": {
