--- a/HRApi/src/HRApi/project.json
+++ b/HRApi/src/HRApi/project.json
@@ -61,6 +61,8 @@
   "publishOptions": {
     "include": [
       "wwwroot",
+      "Views",
+      "appsettings.json",
       "web.config"
     ]
   },
